<resources>
    <string name="app_name">ManagerPerformanceStatistics</string>
    <string name="login_text">login</string>
    <string name="password_text">Password</string>
    <string name="sign_in">Войти</string>
    <string name="welcome_image">Welcome_image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">email</string>
    <string name="sign_up_btn">Регистрация</string>
    <string name="registration_text">Registraton final</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="name_project">Name_project</string>
    <string name="name_manager_working">name_manager_working</string>

    <string name="hotel">Отель</string>
    <string name="name_hotel">Steigenberger Makadi</string>
    <string name="rating">5 Превосходно</string>
    <string name="adress">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="prise">от 134 673 ₽</string>
    <string name="priseConditions">за тур с перелётом</string>
    <string name="about_hotel">Об отеле</string>
    <string name="third_line">3-я линия</string>
    <string name="paid_wi_fi">Платный Wi-Fi в фойе</string>
    <string name="km_30_the_airport">30 км до аэропорта</string>
    <string name="km_1_to_the_beach">1 км до пляжа</string>
    <string name="description">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="conveniences">Удобства</string>
    <string name="most_necessary">Самое необходимое</string>
    <string name="included">Что включено</string>
    <string name="not_included">Что не включено</string>
    <string name="choosing_hotel_room">К выбору номера</string>
    <string name="enter_name">Введите своё имя:</string>
    <string name="name_surname">Имя Фамилия</string>
    <string name="enter_password">Введите свой пароль:</string>
    <string name="name_company">ООО «Кристалл»</string>
    <string name="info_company">Производство архитектурного \n фасадного декора</string>
    <string name="example_number">123456</string>
    <string name="image">image</string>
    <string name="name_surname_draw">Name Surname</string>
    <string name="admin">Admin</string>
    <string name="post">post:</string>

</resources>