<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="@dimen/top_big"
        android:src="@drawable/foto_traub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_little"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/name_surname_draw"
        android:textSize="@dimen/text_size_middle_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image" />

    <TextView
        android:id="@+id/postTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/post"
        android:textSize="@dimen/text_size_middle_one"
       android:paddingStart="@dimen/padding_start_2"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <TextView
        android:id="@+id/postUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/admin"
        android:layout_marginStart="@dimen/padding_inner"
        android:textSize="@dimen/text_size_middle_one"
        app:layout_constraintStart_toEndOf="@id/postTV"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

</androidx.constraintlayout.widget.ConstraintLayout>