<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.ActionAccount.CreateAccountFragment">

    <LinearLayout
        android:id="@+id/companyInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_inner"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding"
            android:columnCount="2"
            android:rowCount="2">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_rowSpan="2"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/padding"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_company" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/name_company"
                android:textColor="@color/sign_in_btn_text"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_vertical|top"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/info_company"
                android:textColor="@color/sign_up_btn_bak"
                android:textSize="@dimen/text_size_little" />

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/box_info"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyInfo">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/text_size_little"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="Имя и фамилия сторудника: " />


        <EditText
            android:id="@+id/nameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_edit_text"
            android:inputType="text"
            android:textSize="@dimen/text_size_middle"
            android:fontFamily="@font/sf_pro_display_regular"
            android:hint="Имя Фамилия"
            android:padding="@dimen/padding_inner_middle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/text_size_little"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="Почта сотрудника:" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_edit_text"
            android:hint="Почта сотрудника"
            android:textSize="@dimen/text_size_middle"
            android:fontFamily="@font/sf_pro_display_regular"
            android:padding="@dimen/padding_inner_middle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/text_size_little"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="Пароль сотрудника: " />


        <com.mukeshsolanki.OtpView
            android:id="@+id/passwordEdit"
            style="@style/OtpWidget.OtpView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:hint="......"
            android:textSize="@dimen/text_size_middle"
            android:itemBackground="@drawable/box_password"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            app:OtpHideLineWhenFilled="true"
            app:OtpItemCount="6"
            app:OtpItemSpacing="@dimen/padding_inner"
            app:OtpState_filled="true" />

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_middle"
            android:background="@drawable/box_btn"
            android:ems="10"
            android:fontFamily="@font/sf_pro_display_bold"
            android:padding="@dimen/padding_inner_middle"
            android:text="Создать пользователя "
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>